--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,32 @@
+
 {
-    "version":2,
-    "builds":[
+    "version": 2,
+    "builds": [
         {
-            "src":"backend/wsgi.py",
-            "use":"@vercel/python",
-            "config":{
-                "maxLambdaSize":"15mb",
-                "runtime":"python"
+            "src": "backend/wsgi.py",
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "15mb",
+                "runtime": "python3.9"
+            }
+        },
+        {
+            "src": "build.sh",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "staticfiles_build"
+            }
         }
-    },
-    {
-        "src":"build.sh",
-        "use":"@vercel/static-build",
-        "config":{
-            "disrDir":"staticfiles_build"
-        }
-    }
     ],
-    "routes":[
+    "routes": [
         {
-            "src":"/static/(.*)",
-            "dest":"/static/$1"
-        }
-        ,
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
         {
-            "src":"/(.*)",
-            "dest":"/backend/wsgi.py"
+            "src": "/(.*)",
+            "dest": "backend/wsgi.py"
         }
     ]
+
 }
