--- a/vercel.json
+++ b/vercel.json
@@ -23,8 +23,17 @@
             "dest": "/static/$1"
         },
         {
-            "src": "/(.*)",
+            "src": "/api/(.*)",
             "dest": "backend/wsgi.py"
-        }
+        },
+        {
+            "src": "/(.*)",
+            "headers": {
+              "Access-Control-Allow-Origin": "https://seu-dominio-frontend.com",
+              "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+              "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept, Authorization",
+              "Access-Control-Allow-Credentials": "true"
+            }
+          }
     ]
 }
